# scifserver

./: Makefile  Makefile.am  README.md  autogen.sh  client.c  client_handler_fns.c  configure.ac  main.c  messages.proto  serversocket.c  uncrustify-linux.cfg
common/: Makefile.am  component.c
component/: Makefile.am  component.c
config/: Makefile.am  config.c
docs/: scifserver.dox
include/: client-private.h  client.h  component.h  config.h  log.h  serversocket.h  sserver.h
m4/: ax_pthread.m4
messages/: Makefile.am  messages.proto
scifclient/: Makefile.am  main.c
scifserver/: Makefile.am  client.c  client_handler_fns.c  main.c  serversocket.c
testclient/: main.c
tests/: Makefile.am  gen_server_cert.sh  run_testclient.sh
